--- a/model_testing/mlp.ipynb
+++ b/model_testing/mlp.ipynb
@@ -3,43 +3,47 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "<h1><center>MLP</center></h1?>\n"
+    "<h1 style=\"text-align: center;\">CSC3066 Deep Learning (Fake News Detection)</h1>\n",
+    "\n",
+    "<h6 style=\"margin: 0; padding:0; text-align: right;\">Student Name: Ryan McKee</h6>\n",
+    "<h6 style=\"margin: 0; padding:0; text-align: right;\">Student Number: 40294886</h6>\n",
+    "<h6 style=\"margin: 0; padding:0; text-align: right;\">Date: 02/04/2024</h6>\n",
+    "\n",
+    "<h5 style=\"margin: 0; padding: 0; text-align: left;\"><u>Introduction</u></h5>\n",
+    "\n",
+    "<h5 style=\"margin: 0; padding: 0; text-align: left;\">\n",
+    "This notebook contains the implementation of four distinct approaches for the classification of the veracity of text utilizing neural networks. Supervised neural networks will be trained using the provided train.csv, consisting of 2000 labelled tweets, and evaluated using the 500 labelled tweets in the test.csv. Various methods of improving model performance will be explored, including preprocessing techniques for both training and test data, as well as model architecture and hyperparameter tuning. The document will present the best-performing version of the model after extensive experimentation with these techniques.\n",
+    "\n",
+    "The model types being analyzed are as follows:\n",
+    "\n",
+    "- The first is a Multi-Layer Perceptron (MLP) utilizing the training set, where each training data record is represented as a single vector derived from a pre-trained word embeddings vector.\n",
+    "- The second MLP will utilize the Keras Embedding layer to embed the training data in a pre-trained embedding model.\n",
+    "- The third will utilize a Convolutional Neural Network (CNN), where each record will be represented as a sequence of pre-trained word embedding vectors, leveraging the Keras Embedding layer.\n",
+    "- The fourth will utilize a Recurrent Neural Network (RNN) model, where each record is represented as a sequence of pre-trained word embedding vectors, also using the Keras Embedding layer.\n",
+    "</h5>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Imports</h3>"
+    "<h5 style=\"margin: 0; padding: 0; text-align: left;\"><u>Imports</u></h5>\n",
+    "<h5 style=\"margin: 0; padding: 0; text-align: left;\">This section shows the imports for these two modesl. The MLP models will use numpy for matrix calculations, pandas for improting the datasets and tensorflow keras for data pre-processing through to the artificial neural networks creations. I have also imported the keyedvectors function for ...., re for text manipulation and nltk for pre-processing removing stop words and such</h5>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Embedding\n",
-    "from tensorflow.keras.regularizers import l1\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "from gensim.models import KeyedVectors\n",
-    "from tensorflow.keras.initializers import Initializer\n",
-    "import re \n",
-    "import nltk\n",
     "\n",
-    "# Config for GPU\n",
+    "import tensorflow as tf\n",
+    "tf.config.set_visible_devices([], 'GPU') # Disable GPU: Issues currently with GPU memory growth\n",
+    "# Config for GPU memory growth\n",
     "# gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "# if gpus:\n",
     "#     try:\n",
@@ -47,18 +51,26 @@
     "#             tf.config.experimental.set_memory_growth(gpu, True)\n",
     "#     except RuntimeError as e:\n",
     "#         print(e)\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Embedding\n",
+    "from tensorflow.keras.regularizers import l1\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.initializers import Initializer\n",
     "\n",
-    "# Having issues with gpu, so running cpu instead\n",
-    "tf.config.set_visible_devices([], 'GPU')\n"
+    "from gensim.models import KeyedVectors\n",
+    "import matplotlib.pyplot as plt\n",
+    "import re \n",
+    "import nltk\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Loading the training,Testing</h3>\n",
+    "<h5><u>Data Loading</u></h5>\n",
     "\n",
-    "This section of code I load the training and testing data"
+    "This section data loading is performed, Using the pandas library the training data (2000 text tweets), testing data (500 text tweets) and associated labels are loaded in as np.arrays using the pandas library. Then the pre-trained word embeddings vector representation for words are loaded in which will be used for embedding the words in our training and testing dataset so words in our sentences can be passed into our four different models."
    ]
   },
   {
@@ -75,38 +87,25 @@
     "# Load the testing \n",
     "df_testing = pd.read_csv('C:\\\\Users\\\\ryanm\\\\OneDrive\\\\Desktop\\\\deep learning\\\\assignments\\\\Deep-Learning-Assignment-2\\\\test.csv')  \n",
     "X_test = np.array(df_testing.values[:, 0])\n",
-    "y_test = np.array(df_testing.values[:, 1], dtype=np.float32)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3>Load the GLoVe embedding vector</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y_test = np.array(df_testing.values[:, 1], dtype=np.float32)\n",
+    "\n",
     "# Load the GLoVe word embeddings\n",
     "filename = \"C:\\\\Users\\\\ryanm\\\\OneDrive\\\\Desktop\\\\deep learning\\\\assignments\\\\Deep-Learning-Assignment-2\\\\glove.6B.300d.txt.word2vec\"\n",
-    "glove = KeyedVectors.load_word2vec_format(filename, binary=False) # for now binary is true"
+    "glove = KeyedVectors.load_word2vec_format(filename, binary=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Pre-processing - Cleaning the data</h3>\n",
-    "In this section I apply several pre-processing steps to clean the training and testing data from noise that would negatively affect the models ability to learn from the model. \n",
+    "<h5><u>Pre-processing - Cleaning the data</u></h5>\n",
+    "<h5>In this section I apply several pre-processing steps to clean the training and testing data from noise that would negatively affect the models ability to learn from the model. \n",
     "\n",
     "These steps include: \n",
     "- Removing special character's/words ( punctuation / urls )\n",
     "- Remove stopwords any words that are contained within the sentence's that exist within the nltk.stopwords repository are removed from the sentences\n",
-    "- Perform lemmanzation: moving words to their roots for better text analysis."
+    "- Perform lemmanzation: moving words to their roots for better text analysis.\n",
+    "</h5>"
    ]
   },
   {
@@ -195,6 +194,14 @@
    "metadata": {},
    "source": [
     "## MLP with flattened glove embedded word vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h5><u>Manully embedding the tokenised training/testing data</u></h5>\n",
+    "<h5></h5>"
    ]
   },
   {
