--- a/model_testing/40294886.ipynb
+++ b/model_testing/40294886.ipynb
@@ -176,6 +176,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "import time \n",
+    "import numpy as np\n",
+    "\n",
+    "# function will evaluate a model passed in params\n",
+    "def evaluate_model(model, X, y):\n",
+    "    loss, accuracy = model.evaluate(X, y)\n",
+    "    return loss, accuracy\n",
+    "\n",
+    "def train_model_with_kfold(model, X, y, n_folds, batch_size, epochs, verbose=0):\n",
+    "    kf = KFold(n_splits=n_folds, shuffle=True)\n",
+    "    total_training_time = 0 \n",
+    "    training_accuracies, validation_accuracies = [], []\n",
+    "    training_losses, validation_losses = [], []\n",
+    "\n",
+    "    flat_X = X.reshape(X.shape[0], -1)\n",
+    "\n",
+    "    for fold_idx, (train_index, val_index) in enumerate(kf.split(flat_X)):\n",
+    "        print(f\"Fold {fold_idx + 1}/{n_folds}\")\n",
+    "        X_train_fold, X_val_fold = flat_X[train_index], flat_X[val_index]\n",
+    "        y_train_fold, y_val_fold = y[train_index], y[val_index]\n",
+    "        \n",
+    "        # Evaluating the model before training\n",
+    "        initial_training_loss, initial_training_accuracy = evaluate_model(model, X_train_fold, y_train_fold)\n",
+    "        initial_validation_loss, initial_validation_accuracy = evaluate_model(model, X_val_fold, y_val_fold)\n",
+    "        \n",
+    "        start_time = time.time()\n",
+    "        # Fit the model on the training data\n",
+    "        history = model.fit(X_train_fold, y_train_fold, batch_size=batch_size, epochs=epochs, validation_data=(X_val_fold, y_val_fold), verbose=verbose)\n",
+    "        end_time = time.time()\n",
+    "        total_training_time += end_time - start_time\n",
+    "        \n",
+    "        # Get the final training and validation accuracy\n",
+    "        training_accuracies.append((initial_training_accuracy, *history.history['accuracy']))\n",
+    "        validation_accuracies.append((initial_validation_accuracy, *history.history['val_accuracy']))\n",
+    "        \n",
+    "        # Get the final training and validation loss\n",
+    "        training_losses.append((initial_training_loss, *history.history['loss']))\n",
+    "        validation_losses.append((initial_validation_loss, *history.history['val_loss']))\n",
+    "\n",
+    "        print(f\"Fold {fold_idx + 1}/{n_folds} - Training Accuracies: {training_accuracies[-1]}, Validation Accuracies: {validation_accuracies[-1]}\")\n",
+    "\n",
+    "    average_training_time = total_training_time / n_folds\n",
+    "    return training_accuracies, training_losses, validation_accuracies, validation_losses, average_training_time"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [],
