--- a/40294886/code_40294886.ipynb
+++ b/40294886/code_40294886.ipynb
@@ -202,7 +202,7 @@
     "    training_accuracies, validation_accuracies = [], []\n",
     "    training_losses, validation_losses = [], []\n",
     "\n",
-    "    flat_X = X.reshape(X.shape[0], -1) # shape wont change if Normal X data passed only if embedded data is passed\n",
+    "    flat_X = X.reshape(X.shape[0], -1)\n",
     "\n",
     "    for fold_idx, (train_index, val_index) in enumerate(kf.split(flat_X)):\n",
     "        print(f\"Fold {fold_idx + 1}/{n_folds}\")\n",
@@ -891,7 +891,7 @@
     "mlp1.add(Dense(hl1_size, activation=activation, input_shape=(max_len * 300,), kernel_regularizer=regularizer)) # hidden layer\n",
     "mlp1.add(Dense(1, activation='sigmoid'))\n",
     "mlp1.compile(optimizer=optimizer, loss=loss, metrics=['accuracy'])\n",
-    "mlp1, training_accuracies, training_losses, validation_accuracies, validation_losses, average_training_time = train_model_with_kfold(mlp1, X_train_glove_embedded, y_train, n_folds, batch_size, epochs, verbose=0)\n",
+    "mlp1, training_accuracies, training_losses, validation_accuracies, validation_losses, average_training_time  = train_model_with_kfold(mlp1, X_train_glove_embedded, y_train, n_folds, batch_size, epochs, verbose=0)\n",
     "training_accuracies, training_losses, validation_accuracies, validation_losses = convert_to_arrays(training_accuracies, training_losses, validation_accuracies, validation_losses)\n",
     "\n",
     "# Plot the learning curves\n",
